# PINNSFramework

./: 404.html  Readme.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  lint.yml
code/: index.html
docs/: code.fr.md  code.md  index.fr.md  index.md
fr/: index.html
fr/code/: index.html
search/: search_index.json
src/: cli.py  data_models.py  inference_runner.py  logger.py  model.py  ode.py  run.py  run_generate.py  run_generate_CFAST.py  run_inference.py  run_train.py  train.py  trainer.py  trainer_runner.py
src/ai_model_repository/: __init__.py  model_PINN.py
src/cli/: app.py  models.py
src/core/: bootstrap.py  checkpoint_manager.py  data_loader.py  experiment_io.py  factory.py  inference_runner.py  models.py  registry.py  schemas.py  trainer.py  trainer_runner.py
src/core/callback/: base_callback.py  checkpoint_callback.py  earlystopping_callback.py  finalevaluation_callback.py  logging_callback.py  tensorboard_callback.py
src/core/evaluator/: base_evaluator.py  mse_evaluator.py  ode_evaluator.py
src/ode_repository/: ode_base.py  ode_cfast.py  ode_lotka_voltera.py
src/odes/: __init__.py
src/odes/data_generator/: ode_data_generator.py
src/odes/ode_repository/: ode_base.py  ode_cfast.py  ode_lotka_voltera.py
src/odes/visualizers/: base_visualizer.py
src/repositories/data_loader/: base_dataloader.py  parquet_dataloader.py
src/repositories/losses/: __init__.py  pinn_losses.py
src/repositories/models/: __init__.py  model_PINN.py
src/repositories/odes/: __init__.py
src/repositories/odes/data_generator/: ode_data_generator.py
src/repositories/odes/ode_repository/: ode_base.py  ode_cfast.py  ode_lotka_voltera.py
