[project]
name = "pinnsframework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pydantic>=2.13.1",
    "scipy>=1.15.3",
    "structlog>=25.5.0",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.26.0",
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
default = false
