[project]
name = "pinnsframework"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "pydantic>=2.13.1",
    "scipy>=1.15.3",
    "pandas",
    "structlog>=25.5.0",
    "tensorboard>=2.20.0",
    "torch>=2.4.0,<2.6.0",
    "torchvision>=0.19.0,<0.21.0",
    "torchaudio>=2.4.0,<2.6.0",
    "fastparquet>=2026.3.0",
    "pyarrow>=23.0.1",
    "pymdown-extensions>=10.21.2"
]

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
name = "pytorch-cu121"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=1.0.4",
    "mkdocs-material>=9.7.0",
    "mkdocs-macros-plugin>=1.5.0",
    "mkdocs-material>=9.7.0",
    "mkdocs-static-i18n>=1.3.1",
]

[tool.ruff]
line-length = 100
target-version = "py310"

# dossiers à ignorer
exclude = [
    ".venv",
    "build",
    "dist",
    "runs",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (imports)
    "B",   # bugbear
    "UP",  # pyupgrade
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
